[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-api-router"
version = "0.1.0"
description = "Local proxy that routes Claude Code traffic across multiple Anthropic-compatible APIs with priority-based failover."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "brotli>=1.0",   # many gateways (e.g., Cloudflare-fronted) return Content-Encoding: br
    "textual>=0.50",
    "tomli-w>=1.0",
    "typer>=0.12",
    "pydantic>=2.5",
]

[project.scripts]
claude-api-router = "claude_api_router.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_api_router"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
